feat(datasearch): 新增 VipParse 视频解析 SPI 体系，P3C 规约修正
新增视频 VIP 解析 SPI：
- VipParseRequest / VipParseResult 请求/结果模型
- VipParser SPI 接口 + VipParseService 统一入口
- DirectVipParser（直链判断）/ JsonApiVipParser（JSON API 解析）
- META-INF/services 注册 DirectVipParser + JsonApiVipParser

P3C 规约修正（getFirst 替换、JsonNode 数组下标 P3C 豁免注释）：
- AbstractExternalMcpInstallerProvider
- EmailProvider / FceEmailProvider / MailNestEmailProvider / MailTmEmailProvider
- AlibabaRegionProvider / PackageManagerProvider
- VscodeExtensionTaskUsageParser
- OpenMeteoWeatherProvider / WttrInWeatherProvider